# CS419

./: CMakeLists.txt  main.cu
Core/: Input.cuh  Matrix.cpp  Matrix.h  Output.cuh  Pixel.h  Vector.cpp  Vector.h
Core/Image/: Image.cpp  Image.h  ImageKernel.cu  ImageKernel.cuh  ImageLoader.cpp  ImageLoader.h
GPU/: DeviceKernels.cu  DeviceKernels.cuh  GPUHelpers.cu  GPUHelpers.cuh
GeneratedHTMLs/: file.html
Point_Processing/: AffineTransformation.cu  AffineTransformation.cuh  ImageSubtraction.cu  ImageSubtraction.cuh
Visualization/: Visualizer.cpp  Visualizer.h
